[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "endpoint-pulse"
version = "0.1.0"
description = "Endpoint Pulse - a small FastAPI + Jinja app to organize and probe URLs"
authors = [
  { name = "Andreas Jung <info@zopyx.com>"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "httpx>=0.27",
  "pydantic>=2.8",
  "requests>=2.32",
  "python-multipart",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
  "pytest-playwright>=0.5",
  "playwright>=1.45",
]

[project.scripts]
endpoint-pulse = "endpoint_pulse_runner:main"

[tool.hatch.build]
include = [
  "README.md",
  "requirements.txt",
  "templates/**",
  "static/**",
  "main.py",
  "endpoint_pulse_runner.py",
]

[tool.hatch.build.targets.wheel]
# Package as top-level modules
modules = [
  "main",
  "endpoint_pulse_runner",
]
