
[project]
name = "endpoint-pulse"
version = "0.2.3"
description = "Endpoint Pulse - a small FastAPI + Jinja app to organize and probe URLs"
authors = [
  { name = "Andreas Jung <info@zopyx.com>"}
]
readme = "README.md"
license = {text = "WTFPL"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)"
]
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "httpx>=0.27",
  "pydantic>=2.8",
  "requests>=2.32",
  "python-multipart",
]

[project.urls]
"Homepage" = "https://github.com/zopyx/zopyx-url-checker-dashboard"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
  "pytest-playwright>=0.5",
  "playwright>=1.45",
  "anyio>=4.0",
  "tox>=4",
]

[project.scripts]
endpoint-pulse = "endpoint_pulse.endpoint_pulse_runner:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"endpoint_pulse" = ["py.typed", "templates/*", "static/css/*", "static/js/*"]

